--- a/loginPage/PageLogin.html
+++ b/loginPage/PageLogin.html
@@ -5,46 +5,27 @@ class LPage extends Component {
   render() {
     return (
       <form>
-        <div className="row">
-          <div class="col-sm-4">
-            <h1>WELCOME! {this.props.sai}</h1>
-            <h3>Enter your Id and Password</h3>
-          </div>
-          <div class="col-sm-8 col-xs-4">
-            <h3 className="signin">SIGN IN</h3>
-            <div className="input1">
-              <input
-                type="text"
-                style={{
-                  borderRadius: "30px",
-                  border: "none",
-                  backgroundColor: "white",
-                }}
-              />
+        <div className="container-fluid main_page">
+          <div className="row">
+            <div className="col-sm-4 col-xs-6 header_block">
+              <h1>WELCOME! {this.props.sai}</h1>
+              <h3>Enter your Id & Password</h3>
             </div>
-            <div className="input2">
+            <div className="col-sm-8 col-xs-6 login_block">
+              <h4 className="signin">SIGN IN</h4>
+              <div className="input_tag">
+                <input className="input_tag1" type="text" />
+              </div>
+              <div className="input_tag">
+                <input className="input_tag2" type="text" />
+              </div>
+              <div className="button">
               <input
-                type="text"
-                style={{
-                  borderRadius: "30px",
-                  border: "none",
-                  backgroundColor: "white",
-                }}
-              />
-            </div>
-            <div className="button">
-              <input
-                type="button"
-                value="Login"
-                style={{
-                  border: "none",
-                  backgroundColor: "blue",
-                  borderRadius: "30px",
-                  color: "white",
-                  width: "225px",
-                  fontSize: '18px'
-                }}
-              />
+               type="button"
+               value="Login"
+               className="btn btn-primary button_tag"
+               />
+              </div>
             </div>
           </div>
         </div>
